implemented scope in checker